[project]
name = "custom-canva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "docker>=7.1.0",
    "isort>=7.0.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "pytest>=9.0.1",
    "streamlit>=1.51.0",
    "tavily-python>=0.7.13",
]
